Update version number
-updated version number, this branch marked as 2.0.dev
-updated readme, added note that stable version can be found in branch
'stable'
-fixed typo in license.txt

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
   <groupId>org.fit.jdbcProxyDriver</groupId>
   <artifactId>jdbc-proxy-driver</artifactId>
   <packaging>jar</packaging>
-  <version>1.0</version>
+  <version>2.0.dev</version>
   <name>jdbc-proxy-driver</name>
   <url>http://maven.apache.org</url>
 
