--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
       <groupId>commons-io</groupId>
       <artifactId>commons-io</artifactId>
       <version>2.5</version>
+      <scope>test</scope>
 	</dependency>
     <dependency>
       <groupId>com.h2database</groupId>
